- added the helper to the project - we can now add help texts where ever we want to - added a visible selection to the images. - fixed some minor bugs

--- a/trunk/resource/stylesheet/style.css
+++ b/trunk/resource/stylesheet/style.css
@@ -106,8 +106,9 @@ form p
 	display: block;
 	width: 82px;
 	height: 92px;
-	background: url('/resource/images/helper.png') bottom;
+	background: url('../images/helper.png') bottom;
 	text-indent: -99999px;
+
 }
 .helper_move:hover{	
 	background-position: 0 0;
@@ -115,7 +116,6 @@ form p
 #footer
 {
 	bottom: 0;
-	position: absolute;
 	clear: both;
 	width: 100%;
 	background: #1f1f1f;
